[package]
name = "rgbot"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[dependencies]
serenity = { version = "0.7.1", features = ["cache"] }
regex = { version = "1.3", default-features = false, features = ["std", "perf"] }
err-derive = "0.2"
env_logger = "0.7"
log = "0.4"
contrast = "0.1"
rgb = "0.8"